--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "devDependencies": {
     "@babel/core": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
+    "babel-cli": "^6.26.0",
     "babel-jest": "^29.6.2",
     "jest": "^29.6.2",
-    "prettier": "3.0.1"
+    "prettier": "3.0.1",
+    "webpack": "^5.88.2"
   }
 }
