--- a/express-locallibrary-tutorial/package.json
+++ b/express-locallibrary-tutorial/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "express-locallibrary-tutorial",
+  "name": "express-local-library",
   "version": "0.0.0",
   "engines": {
-    "node": ">=18.17.0"
+    "node": ">=18.13.0"
   },
   "private": true,
   "scripts": {
@@ -11,18 +11,24 @@
     "serverstart": "DEBUG=express-locallibrary-tutorial:* npm run devstart"
   },
   "dependencies": {
+    "@prettier/plugin-pug": "^2.4.2",
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "express-async-handler": "^1.2.0",
-    "express-rate-limit": "^7.0.1",
+    "express-rate-limit": "^6.7.0",
     "express-validator": "^7.0.1",
-    "helmet": "^7.0.0",
+    "helmet": "^6.1.5",
     "http-errors": "~1.6.3",
-    "luxon": "^3.4.3",
-    "mongoose": "^7.5.2",
+    "luxon": "^3.3.0",
+    "mongoose": "^7.0.4",
     "morgan": "~1.9.1",
+    "prettier": "^2.8.7",
     "pug": "2.0.0-beta11"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
